<resources>
    <string name="app_name">App Berita</string>
    <string name="berita">News Today</string>
    <string name="berita1">Begini Kondisi Masjid Apung Palu Setelah Diterjang Tsunami</string>
    <string name="berita2">Ratna Sarumpaet Operasi Plastik atau Operasi Pengalihan Isu?</string>
    <string name="isiberita1">Masjid Terapung yang terletak di Teluk Palu tak luput dari terjangan tsunami akibat gempa berkekuatan 7,4 skala Richter, Jumat 28 September 2018. Meski terlihat mengalami kerusakan, masjid itu terlihat masih berdiri.  Foto menunjukkan masjid itu separuh terendam air setelah terjadi tsunami. Tak jelas, apakah tiang-tiang penyangga bangunan itu masih utuh atau roboh. Yang jelas, jembatan yang menghubungkan masjid itu dengan daratan sudah tidak terlihat lagi.  Sementara, di wilayah pantai di sekitar masjid itu terlihat sudah porak-poranda. Banyak material-material yang muncul di antara air aut yang terlihat keruh.   Tak hanya Masjid Terapung, tsunami itu juga meluluhlantakkan perkampungan di pesisir. Air yang meluap menerjang bangunan di tepi pantai. Jembtan Kuning yang menjadi ikon Kota Palu pun jug roboh diterjang bah.  Laporan terbaru Badan Nasional Penanggulangan Bencana (BNPB) menyebut 384 orang meninggal akibat bencana ini. Sementara 29 lainnya dilaporkan masih hilang.</string>
    <string name="isiberita2">Kejadian yang menimpa Ratna Sarumpaet berikut cerita ikutannya terlalu sempurna sebagai sebuah kebenaran.  Begitu Prabowo Subianto bicara didepan publik,hari berikutnya sudah keluar data hal yang bersangkut paut dengan kejadian yang menimpa Ratna Sarumpaet,mulai dari aliran uang,Klinik tempat Ratna Sarumpaet berobat,posisi no HP Ratna Sarumpaet disaat kejadian dsb dsb.  Yang intinya menyatakan bahwa ada dua versi seputar kejadian yang menimpa Ratna Sarumpaet,yaitu versi Ratna Sarumpaet sendiri,Dan versi lain yang jelas berbeda.  Akibat selanjutnya Ratna Sarumpaet minta maaf dan mengakui didepan publik kalau dirinya berbohong.  Sebagai seorang  \"tokoh\",jelas kejadian yang menimpa Ratna Sarumpaet jadi sorotan publik,akibatnya perhatian publik terpecah.</string>
    <string name="open">Baca Selengkapnya</string>
    <string name="berita3">Pro Kontra Pembuatan Patung Jokowi di NTT</string>
    <string name="isiberita3">Kementerian Pariwisata berencana membangun patung Presiden Joko Widodo di Desa Tulakadi, Kecamatan Tasifeto, Kabupaten Belu, Nusa Tenggara Timur (NTT). Hal itu disampaikan langsung oleh Kepala Biro Humas Kemenpar Guntur Sakti.  “Itu keinginan dari kepala desa daan masyarakat setempat termasuk Pak Bupati. Jadi untuk memperkuat positioningnya destinasi digital yang sedang mereka bangun itu. Selain ada pohon asam Pak Jokowi, mereka ingin juga menghadirkan (patung) Pak Jokowi untuk menjadi daya tarik orang (agar) ingin datang ke sana,” kata Guntur kepada kumparan, Sabtu (6/10).  Nantinya, pembangunan patung Jokowi itu akan diperuntukan sebagai wisata berfoto. Hal ini mirip dengagn patung ‘Jokowi naik sepeda’ yang jamak ditemui di beberapa bandara di Indonesia.  Namun secaara garis besar, Guntur menjelaskan bahwa konsep patung Jokowi ini tidak seperti patung konstruksi. Konsepnya adalah patung spot foto bagi papra pengunjung yang datang.</string>
</resources>
